# kimai-mcp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  server.py  setup.sh  test_connection.py
