[project]
name = "kimai-mcp"
version = "1.0.0"
description = "Model Context Protocol server for KIMAI 2 time tracking"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["kimai", "mcp", "time-tracking", "llm", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/WalterP/kimai-mcp"
Documentation = "https://github.com/WalterP/kimai-mcp#readme"
Repository = "https://github.com/WalterP/kimai-mcp"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
